--- a/index.html
+++ b/index.html
@@ -15,21 +15,31 @@
   </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="container">
+    <div class="content">
+      <img src="/images/image-victor.jpg" alt="Victor">
+      <h1>Victor Crest <span>26</span></h1>
+      <h2>London</h2>
+      <hr>
+      <div class="data">
+        <div class="follow">
+          <h3>80K</h3>
+          <p>Followers</p>
+        </div>
+        <div class="like">
+          <h3>803K</h3>
+          <p>Likes</p>
+        </div>
+        <div class="photo">
+          <h3>1.4K</h3>
+          <p>Photos</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Jorge Falconi Diez Canseco</a>.
   </div>
 </body>
 </html>
