--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Profile card component</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -14,10 +17,11 @@
 <body>
   <div class="container">
     <div class="content">
-      <img src="/images/image-victor.jpg" alt="Victor">
+      <div class="image">
+        <img src="/images/image-victor.jpg" alt="Victor">
+      </div>
       <h1>Victor Crest <span>26</span></h1>
-      <h2>London</h2>
-      <hr>
+      <h2>London</h2>  
       <div class="data">
         <div class="follow">
           <h3>80K</h3>
